--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.2",
     "expo": "~45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
-    "expo-updates": "~0.13.3"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
