--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "expo": "~45.0.0",
     "expo-camera": "~12.2.0",
+    "expo-media-library": "^14.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "react": "17.0.2",
